--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,15 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 10px;
 }
 
 .profile-image {
@@ -27,6 +30,17 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.left-box {
+  display: flex;
+  flex: 1;
+  gap: 10px;
+}
+.right-box {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 button {
@@ -45,4 +59,6 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px;
 }
